--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/warranty_fraud?createDatabaseIfNotExist=true
+spring.application.name=demo
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/warranty_fraud_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Server configuration
-server.port=9001
-server.servlet.context-path=/
+# JWT Configuration
+jwt.secret=mySecretKey
+jwt.expiration=86400000
 
 # Logging
 logging.level.com.example.demo=DEBUG
-logging.level.org.springframework.security=DEBUG
