--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-
+server.port=9001
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/warranty_fraud_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
