--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.application.name=demo
-server.port=9001
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/warranty_fraud_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# JWT Configuration
-jwt.secret=mySecretKey
-jwt.expiration=86400000
+# H2 Console (for development)
+spring.h2.console.enabled=true
 
-# Logging
-logging.level.com.example.demo=DEBUG
+# Server Configuration
+server.port=9001
